--- a/index.html
+++ b/index.html
@@ -7,5 +7,31 @@
     <title>Hypertext</title>
   </head>
   <body>
+    <h1>Hypertext linking</h1>
+
+    <section>
+      <h2>MDN</h2>
+
+      <p>Documentation for the web.</p>
+
+      <a href="http://MDN.de" target="_blank">Link to MDN</a>
+    </section>
+
+    <h2>Stack Overflow</h2>
+
+    <p>The place for all your programming problems.</p>
+
+    <a href="http://StackOverflow.de" target="_blank">Link to Stack Overflow</a>
+
+    <h2>GitHub</h2>
+
+    <p>Free hosted git repositories as a service</p>
+
+    <a href="http://GitHub.de" target="_blank">Link to GitHub</a>
+    <section>
+      <h2>Contact me</h2>
+
+      <a href="mailto:Contact@Me.de" target="_blank">Contact me!</a>
+    </section>
   </body>
 </html>
